--- a/src/app/Cargo.toml
+++ b/src/app/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 leptos = { workspace = true, features = ["serde"] }
 leptos_meta.workspace = true
+leptos_router.workspace = true
 
 [features]
 default = ["hydrate"]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
-ssr = ["leptos/ssr", "leptos_meta/ssr"]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
